Fixed alignment of Download CV

--- a/css/home.css
+++ b/css/home.css
@@ -84,7 +84,7 @@
 
 #download_resume {
     margin-top: 0px;
-    text-align: right;
+    text-align: left;
     margin-right: 25px;
     right: 0;
 }
